--- a/UAS_AI.ipynb
+++ b/UAS_AI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyON08IsfufIzOXxsC896l4e",
+      "authorship_tag": "ABX9TyOM6Z6CpGF65WwSjTBOctSf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,15 +89,14 @@
         "            batas_atas = Q3 + 1.5 * IQR\n",
         "            df = df[(df[kolom] >= batas_bawah) & (df[kolom] <= batas_atas)]\n",
         "\n",
+        "    # Konversi kolom 'duration' ke format numerik\n",
+        "    df['duration'] = df['duration'].astype(str).str.extract(r'(\\d+)')\n",
+        "    df['duration'] = pd.to_numeric(df['duration'], errors='coerce')\n",
+        "\n",
         "    # Normalisasi data\n",
         "    if not df.empty and not kolom_numerik.empty:\n",
         "        skala = MinMaxScaler()\n",
-        "        df.loc[:, kolom_numerik] = skala.fit_transform(df[kolom_numerik].astype(float))\n",
-        "\n",
-        "\n",
-        "   # Konversi kolom 'duration' ke format numerik\n",
-        "    df['duration'] = df['duration'].astype(str).str.extract(r'(\\d+)')\n",
-        "    df['duration'] = pd.to_numeric(df['duration'], errors='coerce')\n",
+        "        df.loc[:, kolom_numerik] = skala.fit_transform(df[kolom_numerik].astype(float)).astype(np.float64)\n",
         "\n",
         "\n",
         "    # Langkah 2: Clustering\n",
@@ -200,7 +199,7 @@
         "    print(\"Visualisasi dan evaluasi selesai.\")\n",
         "\n",
         "except FileNotFoundError:\n",
-        "    print(f\"Kesalahan: File '{file_path}' tidak ditemukan. Silakan unggah dataset dan coba lagi.\")"
+        "    print(f\"Kesalahan: File '{file_path}' tidak ditemukan. Silakan unggah dataset dan coba lagi.\")\n"
       ],
       "metadata": {
         "colab": {
@@ -208,9 +207,9 @@
           "height": 1000
         },
         "id": "AtApQDPY2Tyt",
-        "outputId": "86d32469-4594-4ed0-ca85-db973b99b633"
+        "outputId": "347b641f-b297-424c-a194-5cd97ca206af"
       },
-      "execution_count": 28,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,20 +277,20 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-28-4232ec9b5b8a>:64: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[1.   1.   1.   ... 0.4  0.25 0.7 ]' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
-            "  df.loc[:, kolom_numerik] = skala.fit_transform(df[kolom_numerik].astype(float))\n",
-            "<ipython-input-28-4232ec9b5b8a>:68: SettingWithCopyWarning: \n",
+            "<ipython-input-36-0577388b88ab>:62: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
             "  df['duration'] = df['duration'].astype(str).str.extract(r'(\\d+)')\n",
-            "<ipython-input-28-4232ec9b5b8a>:69: SettingWithCopyWarning: \n",
+            "<ipython-input-36-0577388b88ab>:63: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  df['duration'] = pd.to_numeric(df['duration'], errors='coerce')\n"
+            "  df['duration'] = pd.to_numeric(df['duration'], errors='coerce')\n",
+            "<ipython-input-36-0577388b88ab>:68: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[1.   1.   1.   ... 0.4  0.25 0.7 ]' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+            "  df.loc[:, kolom_numerik] = skala.fit_transform(df[kolom_numerik].astype(float)).astype(np.float64)\n"
           ]
         },
         {
